2011-02-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/modificar_agente.php: Lost commit from trunk. Truncated
	agent name in this view.

	Fixes: #3175780

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_db.php: added in function "get_group_agents" the
	parameter "$childGroups" for get the child groups. And in the function
	"get_user_groups" added the parameter "$id_groups" for to get groups. Add
	the function "get_id_groups_recursive" for to get groups in the tree groups.
	 
	* godmode/reporting/visual_console_builder.wizard.php: fixed the select box
	of agents when user have agents in subgroup in any subgroup in the tree
	group.
	
	Fixes: #3180902

2011-02-21 Javier Lanz <javier.lanz@artica.es>

	* godmode/alerts/alert_templates.php: Truncated Group name
	* godmode/alerts/alert_actions.php: Truncated Group name

2011-02-21  Ramon Novoa  <rnovoa@artica.es>

	* godmode/massive/massive_edit_agents.php: Merged from trunk. Check for
	  false instead of the number of updated agents.

2011-02-21  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Support for android and embedded agents.

	* images/os_icons/android_small.png
	images/os_icons/android.png
	images/os_icons/embedded_small.png
	images/os_icons/embedded.png
	images/networkmap/14.png
	images/networkmap/15.png: New icons for embedded & android.

	* pandoradb_data.sql: Version update (3.2.1)

	* include/config_process.php: Version update.

	* extensions/ssh_console,
	extensions/vnc: Ported SSH and VNC extensions from trunk.

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_db.php: added in function "get_group_agents" the
	parameter "$childGroups" for get the child groups. And in the function
	"get_user_groups" added the parameter "$id_groups" for to get groups. Add
	the function "get_id_groups_recursive" for to get groups in the tree groups.
	 